added home page and transaction history

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -211,17 +211,9 @@
                                 <div>
                                     <h5 class="card-title">Terminal Information</h5>
                                 </div>
-                                <!-- <div class="ml-auto">
-                                    <select class="custom-select b-0">
-                                        <option selected="">January</option>
-                                        <option value="1">February</option>
-                                        <option value="2">March</option>
-                                        <option value="3">April</option>
-                                    </select>
-                                </div> -->
                             </div>
                             <div class="table-responsive m-t-20 no-wrap">
-                                <table id="myTable"  class="table table-bordered table-striped">
+                                <table  class="table table-bordered table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                                     <thead>
                                         <tr>
                                             <th>S/N</th>
@@ -233,7 +225,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let terminal of dashboardModel.terminals">
+                                        <tr *ngFor="let terminal of terminals">
                                             <td>
                                                 {{ terminal.id }}
                                             </td>
@@ -241,8 +233,8 @@
                                                 <h6>{{ terminal.terminalAlias }}</h6>
                                             </td>
                                             <td>{{ terminal.ipAddress }}</td>
-                                            <td> </td>
-                                            <td></td>
+                                            <td>{{ getCIMStatus(terminal) }} </td>
+                                            <td>{{ getCashUnitInfoStatus(terminal) }}</td>
                                             <td>{{ terminal.logOnToHost ? 'Online' : 'Offline' }}</td>
                                         </tr>
                                     </tbody>
