added terminals page init

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div [ngClass]="{'fix-header fix-sidebar': isLoggedIn}" class="card-no-border">
+<!-- <div [ngClass]="{'fix-header fix-sidebar': isLoggedIn}" class="card-no-border">
   <div id="main-wrapper" *ngIf="isLoggedIn">
-    
+
     <app-nav-menu ></app-nav-menu>
 
     <app-side-menu></app-side-menu>
@@ -13,5 +13,29 @@
   </div>
 
   <router-outlet *ngIf="!isLoggedIn"></router-outlet>
-    
+
+</div> -->
+
+<div *ngIf="isLoggedIn" class="card-no-border fix-header fix-sidebar">
+  <div id="main-wrapper">
+
+    <app-nav-menu></app-nav-menu>
+
+    <app-side-menu></app-side-menu>
+
+    <div class="page-wrapper">
+
+      <router-outlet></router-outlet>
+
+    </div>
+  </div>
+
+  <!-- <router-outlet  *ngIf="!isLoggedIn()"></router-outlet> -->
 </div>
+
+<div *ngIf="!isLoggedIn" class="card-no-border">
+
+    <router-outlet></router-outlet>
+
+</div>
+
