--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -22,7 +22,7 @@
                       </li>
                       <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="icon-Box-Full"></i><span class="hide-menu">Terminal</span></a>
                           <ul aria-expanded="false" class="collapse">
-                              <li><a href="app-email.html">Terminal List</a></li>
+                              <li><a [routerLink]="'/terminal'">Terminal List</a></li>
                               <li><a href="#" class="has-arrow">Terminal Management</a>
                                 <ul aria-expanded="false" class="collapse">
                                     <li><a href="pages-login.html">Device Componenet</a></li>
