added user and role list

--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -20,31 +20,31 @@
 
                           </ul>
                       </li>
-                      <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="icon-Box-Full"></i><span class="hide-menu">Terminal</span></a>
+                      <li> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i class="icon-Box-Full"></i><span class="hide-menu">Terminal</span></a>
                           <ul aria-expanded="false" class="collapse">
                               <li><a [routerLink]="'/terminal'">Terminal List</a></li>
-                              <li><a href="#" class="has-arrow">Terminal Management</a>
+                              <li><a class="has-arrow">Terminal Management</a>
                                 <ul aria-expanded="false" class="collapse">
                                     <li><a href="pages-login.html">Device Componenet</a></li>
                                     <li><a href="pages-login.html">Key Exchange</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="has-arrow">Adminsitration</a>
+                            <li><a class="has-arrow">Adminsitration</a>
                                 <ul aria-expanded="false" class="collapse">
                                     <li><a href="pages-login.html">Add Terminal</a></li>
                                 </ul>
                             </li>
                           </ul>
                       </li>
-                      <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="icon-On-Off-3"></i><span class="hide-menu">Users & Access Mgt</span></a>
+                      <li> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i class="icon-On-Off-3"></i><span class="hide-menu">Users & Access Mgt</span></a>
                           <ul aria-expanded="false" class="collapse">
-                              <li><a href="ui-cards.html">Users List</a></li>
-                              <li><a href="ui-user-card.html">Role List</a></li>
+                              <li><a [routerLink]="'/admin/users'">Users List</a></li>
+                              <li><a [routerLink]="'/admin/roles'">Role List</a></li>
                               <li><a href="ui-buttons.html">Permission List</a></li>
                               <li><a href="ui-modals.html">System Audit</a></li>
                           </ul>
                       </li>
-                      <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="icon-Windows-2"></i><span class="hide-menu">Devices</span></a>
+                      <li> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i class="icon-Windows-2"></i><span class="hide-menu">Devices</span></a>
                         <ul aria-expanded="false" class="collapse">
                             <li><a href="#" class="has-arrow">Components</a>
                                 <ul aria-expanded="false" class="collapse">
@@ -52,13 +52,13 @@
                                     <li><a href="pages-login.html">Add</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="has-arrow">Device Type</a>
+                            <li><a class="has-arrow">Device Type</a>
                                 <ul aria-expanded="false" class="collapse">
                                     <li><a href="pages-login.html">List</a></li>
                                     <li><a href="pages-login.html">Add</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" class="has-arrow">Device Model</a>
+                            <li><a  class="has-arrow">Device Model</a>
                                 <ul aria-expanded="false" class="collapse">
                                     <li><a href="pages-login.html">List</a></li>
                                     <li><a href="pages-login.html">Add</a></li>
@@ -66,12 +66,12 @@
                             </li>
                         </ul>
                     </li>
-                    <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="icon-Windows-2"></i><span class="hide-menu">Acquirer Mgt</span></a>
+                    <li> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i class="icon-Windows-2"></i><span class="hide-menu">Acquirer Mgt</span></a>
                         <ul aria-expanded="false" class="collapse">
                             <li><a href="widget-data.html">Acquirer List</a></li>
                         </ul>
                     </li>
-                    <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="icon-Windows-2"></i><span class="hide-menu">Dispute Management</span></a>
+                    <li> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i class="icon-Windows-2"></i><span class="hide-menu">Dispute Management</span></a>
                         <ul aria-expanded="false" class="collapse">
                             <li><a href="pages-login.html">List</a></li>
                             <li><a href="pages-login.html">Add</a></li>
