--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -66,8 +66,8 @@ File: scss
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700");
 
-/******************* 
-Global Styles 
+/*******************
+Global Styles
 *******************/
 
 @import url(../scss/icons/font-awesome/css/font-awesome.min.css);
@@ -88,7 +88,7 @@ body {
     font-family: "Montserrat", sans-serif;
     margin: 0;
     overflow-x: hidden;
-    color: #67757c;
+    /* color: #67757c; */
     font-weight: 300;
     font-size: 14px;
 }
@@ -1086,7 +1086,7 @@ sidebar navigation
 }
 
 .sidebar-nav ul li a {
-    color: #8d97ad;
+    color: #212529;
     padding: 10px 35px 10px 15px;
     display: block;
     font-size: 15px;
@@ -1342,8 +1342,8 @@ File: scss
 /*Extra Variable*/
 
 
-/*============================================================== 
- For all pages 
+/*==============================================================
+ For all pages
  ============================================================== */
 
 #main-wrapper {
@@ -3389,7 +3389,7 @@ Buttons
 }
 
 
-/*============================================================== 
+/*==============================================================
  Buttons page
  ============================================================== */
 
@@ -3600,7 +3600,7 @@ Form summernote
 }
 
 
-/*============================================================== 
+/*==============================================================
 Form addons page
 ============================================================== */
 
@@ -3666,7 +3666,7 @@ Form addons page
 }
 
 
-/*============================================================== 
+/*==============================================================
 Form Material page
  ============================================================== */
 
@@ -3728,7 +3728,7 @@ Form Material page
 
 
 /*******************
-Form validation error 
+Form validation error
 ******************/
 
 .error .help-block {
@@ -3737,7 +3737,7 @@ Form validation error
 
 
 /*******************
-File Upload 
+File Upload
 ******************/
 
 .fileupload {
@@ -5866,7 +5866,7 @@ File: scss
 }
 
 
-/*============================================================== 
+/*==============================================================
 widget-chart-page product review
  ============================================================== */
 
@@ -6311,8 +6311,8 @@ File: scss
 */
 
 
-/*============================================================== 
- For Laptop & above all (1650px) 
+/*==============================================================
+ For Laptop & above all (1650px)
  ============================================================== */
 
 @media (min-width: 1650px) {
@@ -6338,8 +6338,8 @@ File: scss
 }
 
 
-/*============================================================== 
- For Laptop & above all (1370px) 
+/*==============================================================
+ For Laptop & above all (1370px)
  ============================================================== */
 
 @media (max-width: 1370px) {
@@ -6356,8 +6356,8 @@ File: scss
 }
 
 
-/*-- ============================================================== 
- Small Desktop & above all (1024px) 
+/*-- ==============================================================
+ Small Desktop & above all (1024px)
  ============================================================== */
 
 @media (min-width: 1024px) {
@@ -6402,8 +6402,8 @@ File: scss
 }
 
 
-/*-- ============================================================== 
- Ipad & above all(768px) 
+/*-- ==============================================================
+ Ipad & above all(768px)
  ============================================================== */
 
 @media (min-width: 768px) {
@@ -6440,8 +6440,8 @@ File: scss
 }
 
 
-/*-- ============================================================== 
- Phone and below ipad(767px) 
+/*-- ==============================================================
+ Phone and below ipad(767px)
  ============================================================== */
 
 @media (max-width: 767px) {
